--- a/mini/css/main.css
+++ b/mini/css/main.css
@@ -80,6 +80,10 @@ a:hover{
 	margin-top: 50px;
 	margin-left: 20px;
 }
+.gatitos:hover{
+    transform: scale(1.1);
+    transition:-duration: 1s;
+}
 .ext{
 	height: 300px;
 }
@@ -118,7 +122,6 @@ footer{
 .pincha:hover{
     transform: scale(1.1);
     transition:-duration: 1s;
-    opacity: 0.5;
 }
 
 .pincha a{
